--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
         # show_sql: true # sql 문 보여주기 , 하지만 로그로 보는것이 바람직
         format_sql: true
 
+  # 페이징에 관한 글로벌 설정
+  data:
+    web:
+      pageable:
+        default-page-size: 10 # 기본 페이지 사이즈
+        max-page-size: 2000 # 최대 페이지 사이즈
 
 logging.level:
   org.hibernate.SQL: debug # sql로그로 기록 보기
